# SponsorSync

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_TASK_LIST.md  IMPLEMENTATION_PLAN.md  ONE_TASK_AT_A_TIME_PROMPT.md  README.md  pyproject.toml  sponsor_sync.py
.github/workflows/: ci.yml
configs/: rules.default.json
configs/environments/: production.json
src/sponsor_sync/: __init__.py  claude_profile_extraction.py  config.py  core.py  cv_ingestion.py  models.py  utilities.py
src/sponsor_sync/connectors/: __init__.py  base.py  reed.py  scraper_framework.py  uk_job_boards_scraper.py
tests/: test_claude_profile_extraction.py  test_config.py  test_cv_ingestion.py  test_models.py  test_reed_connector.py  test_scraper_framework.py  test_security_baseline.py  test_sponsor_sync.py  test_uk_job_boards_scraper.py  test_utilities.py
