[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sponsorsync"
version = "0.1.0"
description = "SponsorSync job search system"
readme = "IMPLEMENTATION_PLAN.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.0.0",
  "pre-commit>=4.0.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
sponsorsync = "sponsor_sync.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP017"]

[tool.pytest.ini_options]
pythonpath = ["src"]

